syntax = "proto3";
package pkg.policy.policypb;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/ScoreTrak/ScoreTrak/pkg/policy/policypb";

message Policy {
  google.protobuf.BoolValue allow_unauthenticated_users = 1;
  google.protobuf.BoolValue allow_changing_usernames_and_passwords = 2;
  google.protobuf.BoolValue show_points = 3;
  google.protobuf.BoolValue show_addresses = 4;
  google.protobuf.BoolValue allow_red_team_launching_service_tests_manually = 5;
}

message GetRequest{}
message GetResponse{
  Policy policy = 1;
}
message UpdateRequest{
  Policy policy = 1;
}

message UpdateResponse{}

service PolicyService{
  rpc Get(GetRequest) returns (stream GetResponse){}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
}